# watsonx-videogenie

./: .gitignore  LICENSE  Makefile  PRODUCTION_TRANSFORMATION.md  README.md  create_prompt_service2.sh  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  local-smoke.yml
backup/: README.md  create.sh
charts/videogenie/: Chart.yaml  values.yaml
charts/videogenie/templates/: _helpers.tpl  avatar-svc.yaml  deployment.yaml  kafka-secret.yaml  orchestrate-job.yaml  prompt-svc.yaml  renderer-deploy.yaml  websocket.yaml
develoment/: avatar_guide.md
docs/: README.md  setup.md
frontend/: .env.example  README.md  index.html  package.json
frontend/docs/: README.md
frontend/public/: index.html  manifest.webmanifest
frontend/src/: App.tsx  api.ts  index.js  styles.css
frontend/src/components/: AvatarPicker.tsx  SlideEditor.tsx  Timeline.tsx  VideoPlayer.tsx  VoicePicker.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: DeckPage.tsx  GeneratePage.tsx
infra/: README.md
infra/terraform/: main.tf  outputs.tf  variables.tf
manifests/: README.md  keda-scaledobject.yaml  websocket.yaml
metrics-action/: README.md  index.ts
pipelines/: READMe.md
pipelines/argo/: event-source.yaml  render-workflow.yaml  sensor.yaml  workflow.yaml
pipelines/tekton/: build-deploy.yaml  pipeline.yaml  pvc.yaml  trigger.yaml
pipelines/tekton/tasks/: buildah.yaml  helm-upgrade.yaml
renderer/: Dockerfile  README.md  deployment.yaml  render.py
services/: README.md
services/avatar-service/: Dockerfile  README.MD  knative.yaml
services/avatar-service/app/: __init__.py  main.py  render.py
services/metrics-action/: README.md  index.ts
services/orchestrate-service/: Dockerfile  README.md  codeengine.yaml  job.py
services/prompt-service/: Dockerfile  README.md  knative.yaml
services/prompt-service/app/: __init__.py  main.py  utils.py
test/: test_avatar.ipynb
tests/: __init__.py  conftest.py
tests/prompt_service/: test_utils.py
